# instant-key

./: index.html  package-lock.json  package.json
src/: App.scss  App.tsx  cache.ts  main.tsx  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/bindings/: Config.ts  Key.ts  KeyType.ts  Preferences.ts
src-tauri/src/: main.rs  util.rs
src-tauri/src/util/: icons.rs  preferences.rs
