[package]
name = "instant-key"
version = "0.0.0"
description = "A Tauri App"
authors = ["you"]
license = ""
repository = ""
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.5", features = [] }

[dependencies]
tauri = { version = "1.5", features = [ "protocol-all", "shell-execute", "path-all", "fs-all", "global-shortcut-all", "window-hide", "window-center", "window-show", "window-set-size", "window-set-focus", "window-set-skip-taskbar"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
directories = "5.0.1"
plist = "1.6.0"
rust_search = "2.1.0"
image = "0.24.7"
window-vibrancy = "0.4.3"
ts-rs = "7.0"
tauri-plugin-single-instance = { git = "https://github.com/tauri-apps/plugins-workspace", branch = "v1" }

[features]
# this feature is used for production builds or when `devPath` points to the filesystem
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
